<resources>
    <string name="app_name">Fuel Analyst</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="title_activity_add_vechicle">AddVechicleActivity</string>

    <!-- fuel types -->
    <string name="choose_a_fuel_type">Choose a fuel type</string>
    <string-array name="fuel_types">
        <item>Diesel</item>
        <item>Petrol</item>
        <item>Petrol + Gas</item>
        <item>Electric</item>
        <item>Hybrid</item>
        <item>Gas</item>
    </string-array>

    <!-- transmission types -->
    <string name="choose_a_transmission">Choose a transmission</string>
    <string-array name="transmission_types">
        <item>Manual</item>
        <item>Automatic</item>
    </string-array>

    <!-- odometer units -->
    <string name="choose_a_odometer_unit">Choose a odometer unit</string>
    <string-array name="odometer_units">
        <item>Mile</item>
        <item>Metric</item>
    </string-array>

    <!-- body types -->
    <string name="choose_a_body_type">Choose a body type</string>
    <string-array name="body_types">
        <item>Cabriolet</item>
        <item>Coupe</item>
        <item>Wagon</item>
        <item>Sedan</item>
        <item>SUV</item>
        <item>Dual cowl</item>
        <item>Fastback</item>
        <item>Hatchback</item>
        <item>Liftback</item>
        <item>Limousine</item>
        <item>Mikrovan</item>
        <item>Minivan</item>
        <item>Pick-up</item>
        <item>Roadster</item>
        <item>Targa</item>
        <item>VAN</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_fueling">AddFuelingActivity</string>
    <string name="title_activity_fueling">FuelingActivity</string>

    <!-- Vehicle elements -->
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year_of_manufacture">Year of manufacture</string>
    <string name="weight">Weight</string>
    <string name="fuel">Fuel</string>
    <string name="licence_number">Licence number</string>
    <string name="power">Power</string>
    <string name="engine_capacity">Engine capacity</string>
    <string name="odometer">Odometer</string>
    <string name="transmission">Transmission</string>
    <string name="odometer_unit">Odometer unit</string>
    <string name="body">Body</string>

    <!-- Fueling elements -->
    <string name="date">Date</string>
    <string name="trip">Trip</string>
    <string name="quantity">Quantity</string>
    <string name="full_fueling">Full fueling</string>
    <string name="cost">Cost</string>
    <string name="average_consumption">Average consumption</string>
    <string name="fuel_unit_cost">Fuel unit cost</string>
    <string name="extras">Extras</string>
    <string name="driving_style">Driving style</string>
    <string name="routes">Routes</string>
    <string name="tires">Tires</string>

    <!-- Menu elements -->
    <string name="fueling">Fueling</string>
    <string name="title_activity_fueling_details">FuelingDetailsActivity</string>

</resources>
