<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_add_fueling"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_add_fueling"
        tools:context="pl.arnonedev.fuelanalyst.activity.AddFuelingActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:columnCount="2" android:rowCount="17">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:layout_row="0"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/add_fueling_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:minWidth="180dp"
                    android:layout_marginLeft="10dp"
                    android:text=""
                    android:layout_row="0"
                    android:layout_column="1"
                    android:onClick="setDate"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/odometer"
                    android:layout_row="1"
                    android:layout_column="0"/>
            <EditText
                    android:id="@+id/add_fueling_odometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:minWidth="180dp"
                    android:layout_marginLeft="10dp"
                    android:inputType="number"
                    android:layout_row="1"
                    android:layout_column="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip"
                    android:layout_row="2"
                    android:layout_column="0"/>
            <EditText
                    android:id="@+id/add_fueling_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:minWidth="180dp"
                    android:layout_marginLeft="10dp"
                    android:inputType="number"
                    android:layout_row="2"
                    android:layout_column="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:layout_row="3"
                    android:layout_column="0"/>
            <EditText
                    android:id="@+id/add_fueling_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:minWidth="180dp"
                    android:layout_marginLeft="10dp"
                    android:inputType="number"
                    android:layout_row="3"
                    android:layout_column="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_fueling"
                    android:layout_row="4"
                    android:layout_column="0"/>
            <CheckBox
                    android:id="@+id/add_fueling_full_fueling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:minWidth="180dp"
                    android:layout_marginLeft="10dp"
                    android:layout_row="4"
                    android:layout_column="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost"
                    android:layout_row="5"
                    android:layout_column="0"/>
            <EditText
                    android:id="@+id/add_fueling_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:minWidth="180dp"
                    android:inputType="number"
                    android:layout_marginLeft="10dp"
                    android:layout_row="5"
                    android:layout_column="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_consumption"
                    android:layout_row="6"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/add_fueling_average_consumption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:minWidth="180dp"
                    android:layout_marginLeft="10dp"
                    android:text=""
                    android:layout_row="6"
                    android:layout_column="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fuel_unit_cost"
                    android:layout_row="7"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/add_fueling_fuel_unit_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:minWidth="180dp"
                    android:layout_marginLeft="10dp"
                    android:text=""
                    android:layout_row="7"
                    android:layout_column="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extras"
                    android:layout_row="8"
                    android:layout_column="0"/>
            <LinearLayout
                    android:layout_row="9"
                    android:layout_column="0"
                    android:layout_columnSpan="2">
                <ToggleButton
                        android:id="@+id/add_fueling_extras_clima"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="160dp"
                        android:layout_marginLeft="10dp"/>
                <ToggleButton
                        android:id="@+id/add_fueling_extras_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="160dp"
                        android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driving_style"
                    android:layout_row="10"
            android:layout_column="0"/>
            <LinearLayout
                    android:layout_row="11"
                    android:layout_column="0"
                    android:layout_columnSpan="2">
                <ToggleButton
                        android:id="@+id/add_fueling_normal_driving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="100dp"
                        android:layout_marginLeft="10dp"/>
                <ToggleButton
                        android:id="@+id/add_fueling_eco_driving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="100dp"
                        android:layout_marginLeft="10dp"/>
                <ToggleButton
                        android:id="@+id/add_fueling_dynamic_driving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="100dp"
                        android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/routes"
                    android:layout_row="12"
                    android:layout_column="0"/>
            <LinearLayout
                    android:layout_row="13"
                    android:layout_column="0"
                    android:layout_columnSpan="2">
                <ToggleButton
                        android:id="@+id/add_fueling_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="100dp"
                        android:layout_marginLeft="10dp"/>
                <ToggleButton
                        android:id="@+id/add_fueling_highway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="100dp"
                        android:layout_marginLeft="10dp"/>
                <ToggleButton
                        android:id="@+id/add_fueling_mixed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="100dp"
                        android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tires"
                    android:layout_row="14"
                    android:layout_column="0"/>
            <LinearLayout
                    android:layout_row="15"
                    android:layout_column="0"
                    android:layout_columnSpan="2">
                <ToggleButton
                        android:id="@+id/add_fueling_summer_tire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="100dp"
                        android:layout_marginLeft="10dp"/>
                <ToggleButton
                        android:id="@+id/add_fueling_winter_tire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="100dp"
                        android:layout_marginLeft="10dp"/>
                <ToggleButton
                        android:id="@+id/add_fueling_multi_season"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minWidth="100dp"
                        android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <TextView
                    android:text="@string/fuel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_row="16"
                    android:layout_column="0"/>
            <Spinner
                    android:id="@+id/add_fueling_fuel_type_input"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:minWidth="180dp"
                    android:layout_marginLeft="10dp"
                    android:entries="@array/fuel_types"
                    android:prompt="@string/choose_a_fuel_type"
                    android:layout_row="16"
                    android:layout_column="1"/>
        </GridLayout>
    </ScrollView>
</RelativeLayout>
